# Surprise-UI

./: .env.example  README.md  VISIONLLM_SETUP.md  package-lock.json  package.json  sage7_mcp.py  tools.yaml  visionllm-server.py  vite.config.ts
.gemini/agents/: sage7.md
src/: App.tsx  index.css
src/components/: CrystalStar.tsx  CrystallineRadar.tsx  QuartzBarChart.tsx
src/lib/: api.ts  store.ts  useCrystalSocket.ts
src/underground/: Coder.txt  ForensicsMatrix.tsx  ProtectorDashboard.tsx  types.ts
src/underground/auditory_cortex/: audiopsy.py
src/underground/auditory_cortex/audioanalyser-main/: requirements.txt
src/underground/bridge/: sage_fusion_engine.py
src/underground/core_arch/Multimodal-AGI-Architecture-Implementation-v1-main/: CONTRIBUTING.md  SECURITY.md  gitignore  index.html  sitemap.xml
src/underground/core_arch/Multimodal-AGI-Architecture-Implementation-v1-main/_.github/: PULL_REQUEST_TEMPLATE.md
src/underground/memory/: persistent_memory.py  quantum_synchronicity.py
src_backup_v1/components/: CrystallineRadar.tsx  QuartzBarChart.tsx
src_backup_v1/underground/analytical_engine/LLMs-for-Mathematical-Analysis-main/: requirements.txt
src_backup_v1/underground/core_arch/Multimodal-AGI-Architecture-Implementation-v1-main/: CODE_OF_CONDUCT.md  README.md
src_backup_v1/underground/core_arch/Multimodal-AGI-Architecture-Implementation-v1-main/resources/config/: pyproject.toml
src_backup_v1/underground/defenses/: aegis_guardian.py
src_backup_v1/underground/memory/: sage_memory_vault.py
(+15 files in other folders)
